<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">KullanıcAdı</string>
    <string name="yourUserName">KullanıcıAdınız</string>
    <string name="yourPassword">Parolanız</string>
    <string name="password">Parola</string>
    <string name="userpasswordInvalidate">Kullanıcı Adı veya Parola Yanlış</string>
    <string name="mustUserNameandPassword">Kullanıcı adı veya parola boş bırakılamaz.</string>
    <string name="alreadyRegistered">Kayıt Zaten Mevcut</string>
    <string name="successRegistered">Kayıt Başarıyla Tamamlandı</string>
    <string name="signIn">Giriş Yap</string>
    <string name="signUp">Kayıt Ol</string>

    <string name="title">Başlık</string>
    <string name="subject">Konu</string>
    <string name="description">Açıklama</string>
    <string name="state">Durumu</string>

    <string name="todoNote">Yapılacak </string>
    <string name="continousNote">Yapılıyor </string>
    <string name="doneNote">Yapıldı </string>

    <string name="noteOperations">Not İşlemleri</string>
    <string name="addNote">Not Ekle</string>
    <string name="deleteNote">Not Sil</string>
    <string name="updateNote">Not Güncelle</string>
    <string name="logOut">Çıkış Yap</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="logOutDescriptionString">Uygulamadan  çıkmak istiyormusunuz</string>
    <string name="save">Kaydet</string>
    <string name="cancel">Vazgeç</string>
    <string name="wantedDeleteSelectedRow">Seçili satırı gerçekten silmek istiyormusunuz ?</string>
    <string-array name="note_states">
        <item>@string/doneNote</item>
        <item>@string/continousNote</item>
        <item>@string/todoNote</item>
    </string-array>


</resources>