<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/noteOperations"
            android:title="@string/noteOperations" >

            <menu>
                <item android:id="@+id/addNote"
                    android:icon="@drawable/icon_add_note"
                    android:title="@string/addNote" />
                <item android:id="@+id/updateNote"
                    android:icon="@drawable/icon_update_note"
                    android:title="@string/updateNote" />
                <item android:id="@+id/deleteNote"
                    android:icon="@drawable/icon_delete_note"
                    android:title="@string/deleteNote" />
            </menu>
        </item>
    <item
        android:id="@+id/logOut"
        android:icon="@drawable/icon_logout"
        android:title="@string/logOut" />
</menu>