<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:backgroundTintMode="multiply"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/rc_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:id="@+id/rc_txt_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp" />

    <TextView
        android:id="@+id/rc_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

</LinearLayout>